--- a/next-feature/package.json
+++ b/next-feature/package.json
@@ -10,6 +10,7 @@
     "server": "json-server --watch dbssr.json --port 4000"
   },
   "dependencies": {
+    "cookies-next": "^4.0.0",
     "json-server": "^0.17.0",
     "next": "12.3.0",
     "react": "18.2.0",
